@@ -2,6 +2,7 @@
   - Groovy Console binding:
     - Added SQL2 collection method
     - Page actions: manage tags
+    - Resource actions: rename resource
 
 2018-09-28 1.5.0
   - Groovy Console binding:
